tests/cases/compile_fail/array_bad_types.lsc
main() -> i64 do
  array_push("oops", "x")
  return 0
end
